import type { JSX } from "react";
import { HomeScreen } from "~/home/components/home-screen/home-screen";

export default function HomeRoute(): JSX.Element {
	return <HomeScreen />;
}
