import type { JSX } from "react";
import { SettingsScreen } from "~/settings/components/settings-screen/settings-screen";

export default function SettingsRoute(): JSX.Element {
	return <SettingsScreen />;
}
