import type { JSX } from "react";
import { SignInScreen } from "~/auth/components/sign-in-screen/sign-in-screen";

export default function SignInRoute(): JSX.Element {
	return <SignInScreen />;
}
