...
						router.push("/sign-in");
					}}
					style={({ pressed }) => [
						styles.button,
						pressed && styles.buttonPressed,
					]}
					testID="welcome-sign-in-button"
				>
					<Text style={styles.buttonLabel}>Sign in</Text>
				</Pressable>
			}
			icon={Database}
			style={styles.messageState}
...
