import type { JSX } from "react";
import { LicensesScreen } from "~/settings/components/licenses-screen/licenses-screen";

export default function LicensesRoute(): JSX.Element {
	return <LicensesScreen />;
}
